package br.fai.lds.elderconnect.dto;


import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class CredencialUserDto {

    private String email;
    private String password;

}
