package br.fai.lds.elderconnect.ports_and_adapters.port.dao.crud;

public interface DeleteDao {

    void remove(final int id);

}
